@@ -1,5 +1,9 @@
 2018-07-25  Jonathan Wakely  <jwakely@redhat.com>
 
+	PR libstdc++/86676
+	* testsuite/20_util/monotonic_buffer_resource/release.cc: Allow for
+	buffer being misaligned and so returned pointer not being at start.
+
 	* include/experimental/memory_resource: Include <cstddef> header.
 
 	* acinclude.m4 (glibcxx_SUBDIRS): Add src/c++17.
